// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateCommandsMarkdown > should generate markdown for multiple categories 1`] = `
"### TDD Workflow

- \`/red\` - Write failing test

### Workflow

- \`/commit\` - Create commit

### Worktree Management

- \`/worktree-add\` - Add worktree"
`;

exports[`generateCommandsMarkdown > should generate markdown for single category 1`] = `
"### TDD Workflow

- \`/green\` - Make test pass
- \`/red\` - Write failing test"
`;

exports[`generateCommandsMarkdown > should maintain category order 1`] = `
"### TDD Workflow

- \`/red\` - Write failing test

### Workflow

- \`/commit\` - Create commit

### Worktree Management

- \`/worktree-add\` - Add worktree

### Utilities

- \`/add-command\` - Add new command"
`;

exports[`generateCommandsMarkdown > should sort commands alphabetically within category 1`] = `
"### TDD Workflow

- \`/cycle\` - Full cycle
- \`/green\` - Make test pass
- \`/red\` - Write failing test
- \`/spike\` - Spike phase"
`;

exports[`parseFrontmatter > should parse frontmatter from markdown 1`] = `
{
  "argument-hint": "<test>",
  "description": "Test command",
}
`;
